# dozor

./: .air.toml  .env.bak  .env.example  .gitignore  .golangci.yml  .goreleaser.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md  claude_ps.txt  cmd_check.go  cmd_gateway.go  cmd_serve.go  config.go  go.mod  go.sum  inventory.json  main.go  nodes.txt  nodes_info.txt  pyproject.toml  register.go  run-mcp.sh  setup.go  tool_cleanup.go  tool_deploy.go  tool_diagnose.go  tool_exec.go  tool_health.go  tool_inspect.go  tool_logs.go  tool_prune.go  tool_remote.go  tool_remote_exec.go  tool_restart.go  tool_security.go  tool_services.go  (+4 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: _deploy.yml  ci.yml  deploy.yml  preflight.yml  release-please.yml  release.yml
_python_backup/: install.sh
_python_backup/dozor/: config.py  deploy.py  mcp_handlers.py  mcp_server.py  mcp_tools.py  models.py
_python_backup/scripts/: connect-remote.sh
_python_backup/shared/: __init__.py  logging.py
_python_backup/tests/: test_deploy.py  test_validation.py
cmd/dozor/: api_logs.go  api_logs_test.go  gateway.go  (+30 more)
configs/: claude-code-remote.json
docs/: CONFIGURATION.md  INSTALL.md  compare.md  refactoring.md  roadmap.md
dozor/: __init__.py  agent.py  cli.py  config.py  decorators.py  mcp_handlers.py  mcp_server_sse.py  mcp_tools.py  transport.py  validation.py
scripts/: deploy-remote.sh
shared/: logging.py
tests/: __init__.py  conftest.py  test_decorators.py  test_mcp_handlers.py
workspace/: AGENTS.md  IDENTITY.md  MEMORY.md
(+324 files in other folders)
